src/objects/P7S1_Liferay_Countrylist__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>P7S1_CountryISO2__c</fullName>
        <label>Country ISO 2</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_CountryISO3__c</fullName>
        <label>Country ISO 3</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_CountryLabel__c</fullName>
        <label>Country Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>P7S1 Liferay Countrylist</label>
</CustomObject>